tests/should_fail/04_unresolved_name.self
// ERROR: unresolved name
// EXPECT: UnresolvedName

fn main(): void {
    console.log(doesNotExist);  // ERROR: name not in scope
}
